# monster-mq

./: .env  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD_COMMANDS.md  CLAUDE.md  CONTRIBUTING.md  FLOW-ENGINE.md  MQTT5_IMPLEMENTATION_PLAN.md  NOTES.md  README.md  README_OPCUA.md  THIRD-PARTY-NOTICES.txt  UI_MQTT5_UPDATE_PLAN.md  broker_console.txt  broker_stdout.txt  config.yaml  docker-compose.yml  pr.md  release.sh  test_output.txt  update-dashboard-submodule.sh  version.txt
agents/: README.md  config.example.yaml  monster_agent.py  requirements.txt  system_monitor.py
broker/: .config.yaml.swp  .gitignore  DEVICE_INTEGRATION.md  FLOW-ENGINE.md  README.md  SNOWFLAKE.md  (+37 more)
broker.go/: .dockerignore  .gitignore  Dockerfile  GRAPHQL.md  Makefile  README.md  config.yaml.example  go.mod  go.sum  gqlgen.yml  run.sh
broker.rs/: .gitignore  Cargo.toml  README.md  config.yaml  config.yaml.example
broker.rs/src/: auth.rs  config.rs  lib.rs  log_bus.rs  main.rs  metrics.rs  pubsub.rs  version.rs
broker.rs/src/archive/: group.rs  manager.rs  mod.rs  retention.rs
broker.rs/src/bridge/: mod.rs
broker.rs/src/bridge/mqttclient/: connector.rs  manager.rs  mod.rs
broker.rs/src/broker/: mod.rs  server.rs
broker.rs/src/graphql/: mod.rs  mutation.rs  payload.rs  query.rs  schema.rs  server.rs  subscription.rs
broker.rs/src/stores/: mod.rs  storage.rs  topic.rs  traits.rs  types.rs
broker.rs/src/stores/memory/: mod.rs
broker.rs/src/stores/mongodb/: mod.rs
broker.rs/src/stores/postgres/: mod.rs
broker.rs/src/stores/sqlite/: archive_config_store.rs  db.rs  device_config_store.rs  factory.rs  message_archive.rs  message_store.rs  metrics_store.rs  mod.rs  queue_store.rs  session_store.rs  user_store.rs
(+1332 files in other folders)
